--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:wght@300;400;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -52,9 +51,9 @@
     font-family: var(--font-inter), -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   }
 
-  .font-inria {
-    font-family: 'Inria Serif', serif;
-  }
+.font-inria {
+  font-family: var(--font-inria-serif), serif; 
+}
 
   /* Custom scrollbar */
   ::-webkit-scrollbar {
@@ -177,21 +176,21 @@
 
 /* Typography classes */
 .heading-1 {
-  font-family: 'Inria Serif', serif;
+  font-family: var(--font-inria-serif), serif;
   font-size: 40px;
   font-weight: 700;
   line-height: 1.6;
 }
 
 .heading-2 {
-  font-family: 'Inria Serif', serif;
+  font-family: var(--font-inria-serif), serif;
   font-size: 34px;
   font-weight: 600;
   line-height: 1.6;
 }
 
 .heading-3 {
-  font-family: 'Inria Serif', serif;
+  font-family: var(--font-inria-serif), serif;
   font-size: 22px;
   font-weight: 600;
   line-height: 1.6;
